--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "clean": "rm -rf dist coverage"
   },
   "files": [
     "dist",
@@ -16,6 +15,8 @@
     "./dist/index.js"
   ],
   "devDependencies": {
+    "@types/bun": "^1.2.10",
+    "@types/extract-zip": "^2.0.3",
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3"
   },
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@types/jest": "^29.5.14",
+    "bun": "^1.2.10",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.3.3",
     "jest": "^29.7.0",
@@ -36,27 +38,9 @@
     "yarn": "^1.22.22",
     "zod": "^3.24.3"
   },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "testPathIgnorePatterns": [
-      "<rootDir>/dist/"
-    ],
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/"
-    ],
-    "coverageDirectory": "<rootDir>/coverage/",
-    "testMatch": [
-      "<rootDir>/test/**/*.test.ts"
-    ],
-    "collectCoverage": true,
-    "coverageThreshold": {
-      "global": {
-        "branches": 0,
-        "functions": 0,
-        "lines": 0,
-        "statements": 0
-      }
-    }
+  "testing": {
+    "java-test-applications-path": "./test-applications/java",
+    "c-test-applications-path": "./test-applications/c",
+    "python-test-applications-path": "./test-applications/python"
   }
 }
