--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cldk",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -17,24 +17,19 @@
   ],
   "devDependencies": {
     "@types/bun": "^1.2.10",
-    "@types/extract-zip": "^2.0.3",
+    "@types/extract-zip": "2.0.0",
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3"
   },
   "private": true,
-  "volta": {
-    "node": "22.14.0",
-    "pnpm": "10.8.1",
-    "yarn": "4.9.1"
-  },
   "dependencies": {
+    "@types/jsonstream": "^0.8.33",
     "JSONStream": "^1.3.5",
     "bun": "^1.2.10",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.3.3",
+    "graphology": "^0.26.0",
     "loglevel": "^1.9.2",
-    "rimraf": "^6.0.1",
-    "yarn": "^1.22.22",
     "zod": "^3.24.3"
   },
   "testing": {
