--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "cldk",
+  "name": "@cldk/cldk",
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codellm-devkit/typescript-sdk.git"
+  },
+  "bugs": {
+    "url": "https://github.com/codellm-devkit/typescript-sdk/issues"
+  },
+  "homepage": "https://github.com/codellm-devkit/typescript-sdk#readme",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist",
     "test": "bun test --preload ./test/conftest.ts --timeout=600000 --verbose",
-    "clean": "rm -rf dist coverage"
+    "clean": "rm -rf dist coverage *.lock"
   },
   "files": [
     "dist",
@@ -21,7 +29,9 @@
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3"
   },
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@types/jsonstream": "^0.8.33",
     "JSONStream": "^1.3.5",
