Use npm to publish
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,6 +61,8 @@ jobs:
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          registry-url: "https://registry.npmjs.org"
+          always-auth: true
 
       - name: Publish Release on GitHub
         uses: softprops/action-gh-release@v1
