Attach project to coveralls and generate coverage reports on push/pr/release with badge.
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,9 @@ jobs:
         continue-on-error: false
         run: bun run test
 
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
+
       - name: Generate Changelog
         id: gen_changelog
         uses: mikepenz/release-changelog-builder-action@v5
