--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "homepage": "https://github.com/codellm-devkit/typescript-sdk#readme",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist",
-    "test": "bun test --preload ./test/conftest.ts --timeout=600000 --verbose",
+    "test": "bun test --coverage --coverage-reporter=lcov --preload ./test/conftest.ts --timeout=600000 --verbose",
     "clean": "rm -rf dist coverage *.lock"
   },
   "files": [
