--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -20,7 +20,7 @@ jobs:
         run: bun install
 
       - name: Run tests with coverage
-        run: bun run test
+        run: bun run test:withCoverage
 
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
