--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "homepage": "https://github.com/codellm-devkit/typescript-sdk#readme",
   "scripts": {
     "build": "bun build ./src/index.ts --outdir ./dist",
-    "test": "bun test --verbose --coverage --coverage-reporter=lcov --preload ./test/conftest.ts --timeout=600000",
+    "test": "bun test --verbose --coverage --preload ./test/conftest.ts --timeout=600000",
+    "test:withCoverage": "bun test --verbose --coverage --coverage-reporter=lcov --preload ./test/conftest.ts --timeout=600000",
     "clean": "rm -rf dist coverage *.lock"
   },
   "files": [
@@ -36,6 +37,7 @@
     "@types/jsonstream": "^0.8.33",
     "JSONStream": "^1.3.5",
     "bun": "^1.2.10",
+    "c8": "^10.1.3",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.3.3",
     "graphology": "^0.26.0",
