--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "JSONStream": "^1.3.5",
     "bun": "^1.2.10",
     "c8": "^10.1.3",
+    "chalk": "^5.4.1",
     "extract-zip": "^2.0.1",
     "fast-glob": "^3.3.3",
     "graphology": "^0.26.0",
     "loglevel": "^1.9.2",
+    "signale": "^1.4.0",
     "zod": "^3.24.3"
   },
   "testing": {
