Add rich colorful logging
Signed-off-by: Rahul Krishna <i.m.ralk@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,8 +28,14 @@
     "noPropertyAccessFromIndexSignature": false,
     "baseUrl": ".",
     "paths": {
-      "cldk": ["node_modules/@cldk/cldk"]
-    }
+      "cldk": [
+        "node_modules/@cldk/cldk"
+      ]
+    },
+    "typeRoots": [
+      "./src/ypes",
+      "./node_modules/@types"
+    ]
   },
   "include": [
     "src"
